# music-genres

./: .gitignore  Cargo.toml  README.md  flake.nix  genres.json
js/: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
js/.changeset/: dry-ravens-shake.md  violet-games-hammer.md
js/scripts/: generate.ts
js/src/: index.ts
rust/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
rust-js/: Cargo.toml
rust-js/src/: lib.rs  wasm_api.rs
rust/src/: generated.rs  lib.rs  wasm_api.rs  wasm_api_generated.rs
