[workspace]
resolver = "3"
members = [
    "rust",
    "rust-js"
]

[workspace.dependencies]
parity-scale-codec = { version = "3.7.4", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
