[package]
name = "allfeat-music-genres-js"
version = "0.2.4"
edition = "2024"
description = "JavaScript/WASM bindings for allfeat-music-genres"
license = "GPL-3.0-or-later"
homepage = "https://allfeat.com"
documentation = "https://docs.rs/allfeat-music-genres-js"
readme = "README.md"
keywords = ["music", "genre", "blockchain", "substrate", "allfeat", "wasm"]
categories = ["data-structures", "encoding", "wasm", "web-programming"]
authors = ["Allfeat contributors <dev@allfeat.com>"]
repository = "https://github.com/allfeat/music-genres"

[lib]
crate-type = ["cdylib"]

[dependencies]
allfeat-music-genres = { path = "../rust", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []