[package]
name = "allfeat-music-genres"
version = "0.1.1"
edition = "2021"
description = "Flat genre enum for the Allfeat blockchain with frontend-backend compatibility"
license = "GPL-3.0-or-later"
homepage = "https://allfeat.com"
documentation = "https://docs.rs/allfeat-music-genres"
readme = "README.md"
keywords = ["music", "genre", "blockchain", "substrate", "allfeat"]
categories = ["data-structures", "encoding", "wasm"]
authors = ["Allfeat contributors <dev@allfeat.com>"]
repository = "https://github.com/allfeat/music-genres"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[lib]
name = "allfeat_music_genres"
path = "src/lib.rs"

[dependencies]
parity-scale-codec = { version = "3.7.4", default-features = false, features = [
  "max-encoded-len",
	"derive",
] }
scale-info = { version = "2.11.6", default-features = false, features = [
	"derive",
] }

sp-runtime = { version = "41.1.0", default-features = false }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-runtime/std"
]
