[package]
name = "allfeat-music-genres"
version = "0.2.7"
edition = "2024"
description = "Flat genre enum for the Allfeat blockchain with frontend-backend compatibility"
license = "GPL-3.0-or-later"
homepage = "https://allfeat.com"
documentation = "https://docs.rs/allfeat-music-genres"
readme = "README.md"
keywords = ["music", "genre", "blockchain", "substrate", "allfeat"]
categories = ["data-structures", "encoding", "wasm"]
authors = ["Allfeat contributors <dev@allfeat.com>"]
repository = "https://github.com/allfeat/music-genres"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
parity-scale-codec = { version = "3.7.4", default-features = false, features = [
  "max-encoded-len",
	"derive",
] }
scale-info = { version = "2.11.6", default-features = false, features = [
	"derive",
] }

sp-runtime = { version = "43.0.0", default-features = false }

serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "serde?/std"
]
js = [
  "wasm-bindgen",
  "serde"
]
